Delete PYC files on scripts folder

--- a/rakefile
+++ b/rakefile
@@ -5,7 +5,7 @@ require 'json'
 
 OCTGN_dir = "D:/Documentos/OCTGN"
 start_time = Time.now
-CLOBBER.include ["o8g/*.o8g", "#{OCTGN_dir}/LocalFeed/Card*.nupkg"]
+CLOBBER.include ["o8g/*.o8g", "#{OCTGN_dir}/LocalFeed/Card*.nupkg", "o8g/Scripts/*.pyc"]
 
 task :default => [:build]
 
