--- a/rakefile
+++ b/rakefile
@@ -44,7 +44,7 @@ end
 desc "Builds and moves the NUPKG file to the OCTGN LocalFeed dir"
 task :deploy => [:clobber, :build] do
   mv Dir.glob("o8g/*.nupkg"), "#{OCTGN_dir}/LocalFeed/"
-  Rake::Task["octgn"].execute
+  # Rake::Task["octgn"].execute
   
   end_time = Time.now
   puts "\nTask completed at " + Time.now.strftime("%d-%m-%Y %H:%M")
