--- a/rakefile
+++ b/rakefile
@@ -81,9 +81,9 @@ desc "Converts Markdown documents in Documents/ folder into HTML"
 task :docs do
   puts "Converting Markdown files into HTML"
   # Initializes a Markdown parser
-  renderer = Redcarpet::Render::HTML.new({:with_toc_data=>true, :hard_wrap=>true})
+  renderer = Redcarpet::Render::HTML.new({:with_toc_data=>true, :hard_wrap=>true, :tables => true})
   # Initializes a Markdown HTML renderer
-  markdown = Redcarpet::Markdown.new(renderer, {:autolink=>true, :underline=>true})
+  markdown = Redcarpet::Markdown.new(renderer, {:autolink=>true, :underline=>true, :tables => true})
   toc_md = Redcarpet::Markdown.new(Redcarpet::Render::HTML_TOC.new)
   Dir.glob("o8g/Documents/*.md") do |md_file|
 	puts "   " + md_file
@@ -108,14 +108,50 @@ task :docs do
 		background-color: #FFFBF2;
 	}
 	h2 {
+    clear: left;
 		margin-top: 1.6em;
+	}
+	h3 {
+    clear: left;
 	}
 	li {
 		margin-bottom: 0.5em;
 	}
 	img {
 		max-width: 100%;
+    vertical-align: middle;
 	}
+  .kb {
+    padding: 0 0.2em;
+    font-family: "Courier New", Courier, monospace;
+    line-height: 1.6em;
+    background-color: #eee;
+    border: solid 1px #bbb;
+    border-radius: 3px;
+  }
+  .sm {
+    font-size: 80%;
+  }
+  .col2 + table {
+    clear: left;
+    float: left;
+    margin: 0 1em 2em 0;
+  }
+  table {
+    border-collapse: collapse;
+  }
+  th {
+    padding-bottom: 0.5em;
+  }
+  tbody tr:nth-child(2n) {
+    background-color: #F9F3E6;
+  }
+  thead tr {
+    border-bottom: solid 1px #b6b6b6;
+  }
+  td {
+    padding-right: 0.6em;
+  }
 	</style>
 </head>
 <body>
