--- a/rakefile
+++ b/rakefile
@@ -2,14 +2,20 @@ require 'rake/clean'
 require 'rubygems'
 require 'json'
 require 'redcarpet'
-require 'pathname'; 
+require 'pathname'
 
+plugin_name = "Card Fighters' Clash"
+plugin_dir = "o8g"
+plugin_id = "e3d56d9e-900d-49c6-b6ae-22cbb51be153"
 # Get the path to OCTGN data from OCTGN config
 OCTGN_dir = File.join(ENV["USERPROFILE"], "AppData", "Local", "Programs", "OCTGN")
 OCTGN_data_path = File.open(File.join(OCTGN_dir, "data.path"))
 OCTGN_data_dir = Pathname.new(OCTGN_data_path.read().split('\\').join('/'))
 # Setup clean task
-CLOBBER.include ["o8g/*.o8g", OCTGN_data_dir + "LocalFeed/Card*.nupkg", "o8g/Scripts/**/*.pyc"]
+CLOBBER.include [
+  "#{plugin_dir}/*.o8g", OCTGN_data_dir + "LocalFeed/#{plugin_name}*.nupkg",
+  "#{plugin_dir}/Scripts/**/*.pyc"
+]
 # Rock'n roll
 start_time = Time.now
 
@@ -18,14 +24,14 @@ task :default => [:build]
 
 
 desc "Builds a .o8g and a .nupkg file from the game definition files"
-task :build => [:versionbump, :docs] do
-  sh "o8build.exe -d=o8g"
+task :build => [:versionbump] do
+  sh "o8build.exe -d=#{plugin_dir}"
 end
 
 
 desc "Increases the build number by 1"
 task :versionbump do
-  filename = "o8g/definition.xml"
+  filename = "#{plugin_dir}/definition.xml"
   file = File.open(filename, 'r')
   str = ''
   m = nil
@@ -50,7 +56,7 @@ end
 
 desc "Builds and moves the NUPKG file to the OCTGN LocalFeed dir"
 task :deploy => [:clobber, :build] do
-  mv Dir.glob("o8g/*.nupkg"), "#{OCTGN_data_dir}/LocalFeed/"
+  mv Dir.glob("#{plugin_dir}/*.nupkg"), "#{OCTGN_data_dir}/LocalFeed/"
   # Rake::Task["octgn"].execute
   
   end_time = Time.now
@@ -61,22 +67,22 @@ end
 
 desc "Copies python files to the game's script folder under OCTGN's games database folder"
 task :copy => [:test] do
-  cp_r "o8g/Scripts/.", "#{OCTGN_data_dir}/GameDatabase/e3d56d9e-900d-49c6-b6ae-22cbb51be153/Scripts/"
+  cp_r "#{plugin_dir}/Scripts/.", "#{OCTGN_data_dir}/GameDatabase/#{plugin_id}/Scripts/"
   puts "\nTask completed at " + Time.now.strftime("%d-%m-%Y %H:%M")
 end
 
 
 desc "Verifies the files as a valid game definition"
 task :test do
-  sh "o8build.exe -v -d=o8g"
+  sh "o8build.exe -v -d=#{plugin_dir}"
 end
 
 
 desc "Runs OCTGN in dev mode, in the table view with the CFC game loaded"
 task :octgn do
   # OCTGN window closes after the loading screen ends  ¯\_(ツ)_/¯
-  # system "OCTGN.exe /t /g=e3d56d9e-900d-49c6-b6ae-22cbb51be153 /x"
-  puts "Run OCTGN.exe /t /g=e3d56d9e-900d-49c6-b6ae-22cbb51be153 /x"
+  # system "OCTGN.exe /t /g=#{plugin_id} /x"
+  puts "Run OCTGN.exe /t /g=#{plugin_id} /x"
 end
 
 
@@ -88,7 +94,7 @@ task :docs do
   # Initializes a Markdown HTML renderer
   markdown = Redcarpet::Markdown.new(renderer, {:autolink=>true, :underline=>true, :tables => true, :strikethrough => true})
   toc_md = Redcarpet::Markdown.new(Redcarpet::Render::HTML_TOC.new)
-  Dir.glob("o8g/Documents/*.md") do |md_file|
+  Dir.glob("#{plugin_dir}/Documents/*.md") do |md_file|
 	puts "   " + md_file
 	base_name = File.basename(md_file, ".md")
     html_file = File.join(File.dirname(md_file), base_name + ".html")
